fix: link navbar mobile fix: scrollbar ana.html

--- a/styles/style/breackpointmax480.css
+++ b/styles/style/breackpointmax480.css
@@ -363,14 +363,6 @@
     }
 
 
-    input[ type="radio"] {
-        display: none;
-    }
-
-
-    input[ type="radio"] {
-        display: none;
-    }
 
     .dots {
         display: flex;
@@ -400,7 +392,6 @@
 
     .viewport {
         overflow: hidden;
-        width: 100vw;
     }
 
 
